Resolve Overflow issue

--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 42rem;
   margin-inline: auto;
-  min-height: 100vh;
+  height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
 }
